@@ -822,6 +822,22 @@ name|common
 operator|.
 name|util
 operator|.
+name|IOUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
 name|ObjectReleaseTracker
 import|;
 end_import
@@ -2291,6 +2307,11 @@ operator|.
 name|cancelElection
 argument_list|()
 expr_stmt|;
+name|prevContext
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 name|overseerElector
 operator|.
@@ -3282,30 +3303,23 @@ finally|finally
 block|{
 try|try
 block|{
-try|try
-block|{
-name|overseer
+name|IOUtils
 operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|Exception
-name|e
-parameter_list|)
-block|{
-name|log
-operator|.
-name|error
+name|closeQuietly
 argument_list|(
-literal|"Error closing overseer"
-argument_list|,
-name|e
+name|overseerElector
+operator|.
+name|getContext
+argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
+name|IOUtils
+operator|.
+name|closeQuietly
+argument_list|(
+name|overseer
+argument_list|)
+expr_stmt|;
 block|}
 finally|finally
 block|{
