@@ -165,6 +165,7 @@ Bug Fixes
 * SOLR-10141: Upgrade to Caffeine 2.3.5 since v1.0.1 contributed to BlockCache corruption because the
   removal listener was called more than once for some items and not at all for other items. (Ben Manes, yonik)
 
+* SOLR-9846: Overseer is not always closed after being started. (Mark Miller)
 
 Optimizations
 ----------------------
